// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=false\` because there is no active data integration 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type bigcommerce 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type http 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type magento2 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type recharge 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type shopify 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should pass \`hasIntegrations=true\` because there is an active integration of type smile 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(InfobarCustomerInfoContainer)
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    isEditing={false}
    sources={Immutable.Map {}}
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
      }
    }
  />
</ContextProvider>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and a "generate widgets" button because customer data are loaded, the user is currently editing widgets, it is not currently dragging anything and widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        shape="square"
        size={36}
        style={{}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
    <CustomerTimelineButton
      isEditing={true}
    />
  </div>
  <GenerateButton
    setEditedWidgets={[MockFunction]}
    setEditionAsDirty={[MockFunction]}
    sources={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
        "_internal": Immutable.Map {
          "drag": Immutable.Map {
            "isDragging": false,
          },
          "editedItems": Immutable.List [
            Immutable.Map {
              "template": Immutable.Map {},
            },
          ],
          "hasFetchedWidgets": true,
        },
        "items": Immutable.List [],
      }
    }
  />
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and empty widgets because customer data are loaded, the user is currently editing widgets and it is dragging a widget -- even though widgets are currently empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-edition"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        shape="square"
        size={36}
        style={{}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
    <CustomerTimelineButton
      isEditing={true}
    />
  </div>
  <ContextProvider
    value={
      {
        "isEditing": true,
      }
    }
  >
    <ContextProvider
      value={
        {
          "customerId": 1,
        }
      }
    >
      <Component
        context="ticket"
        displayTabs={true}
        editing={
          {
            "actions": {
              "cancelDrag": [MockFunction],
              "drag": [MockFunction],
              "drop": [MockFunction],
              "generateAndSetWidgets": [MockFunction],
              "removeEditedWidget": [MockFunction],
              "resetWidgets": [MockFunction],
              "setEditedWidgets": [MockFunction],
              "setEditionAsDirty": [MockFunction],
              "startWidgetEdition": [MockFunction],
              "stopWidgetEdition": [MockFunction],
              "updateEditedWidget": [MockFunction],
            },
            "canDrop": [Function],
            "isDragging": true,
            "isEditing": true,
            "state": Immutable.Map {
              "currentContext": "ticket",
              "_internal": Immutable.Map {
                "drag": Immutable.Map {
                  "isDragging": true,
                },
                "editedItems": Immutable.List [
                  Immutable.Map {
                    "template": Immutable.Map {},
                  },
                ],
                "hasFetchedWidgets": true,
              },
              "items": Immutable.List [],
            },
          }
        }
        source={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "integrations": Immutable.Map {
                  "118": Immutable.Map {
                    "foo": "bar",
                  },
                },
              },
            },
          }
        }
        widgets={
          Immutable.List [
            Immutable.Map {
              "template": Immutable.Map {},
            },
          ]
        }
      />
    </ContextProvider>
  </ContextProvider>
</div>
`;

exports[`<InfobarCustomerInfo/> should render basic customer info and the suggestion to add integrations because there is no customer data and there is no data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        shape="square"
        size={36}
        style={{}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
    <CustomerTimelineButton
      isEditing={false}
    />
  </div>
  <AddAppSuggestion />
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because customer data are loaded, the user is not editing widgets and current widgets are empty 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        shape="square"
        size={36}
        style={{}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
    <CustomerTimelineButton
      isEditing={false}
    />
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> should render only basic customer info because there is no customer data and there is some data integrations configured for the account 1`] = `
<div
  className="widgetsList d-flex flex-column"
  data-candu-id="infobar-widgets-list-view"
>
  <div
    className="customerInfo"
  >
    <div
      className="customerProfile"
    >
      <Avatar
        className="mr-3 rounded"
        email=""
        name="foo"
        shape="square"
        size={36}
        style={{}}
      />
      <Link
        className="displayName"
        to="/app/customer/1"
      >
        foo
      </Link>
    </div>
    <div
      className="detail"
    >
      <Component
        channels={Immutable.List []}
        customerId={1}
        customerName="foo"
      >
        <Connect(CustomerNote)
          customer={
            Immutable.Map {
              "id": 1,
              "name": "foo",
            }
          }
        />
      </Component>
    </div>
    <CustomerTimelineButton
      isEditing={false}
    />
  </div>
</div>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <InfobarCustomerInfoContainer
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[MockFunction]}
    hasIntegrations={true}
    isEditing={false}
    sources={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
        "_internal": Immutable.Map {
          "hasFetchedWidgets": true,
        },
        "items": Immutable.List [
          Immutable.Map {
            "id": 1,
            "context": "ticket",
            "template": Immutable.Map {
              "foo": "bar",
            },
          },
        ],
      }
    }
  >
    <div
      className="widgetsList d-flex flex-column"
      data-candu-id="infobar-widgets-list-view"
    >
      <div
        className="customerInfo"
      >
        <div
          className="customerProfile"
        >
          <Avatar
            className="mr-3 rounded"
            email=""
            name="foo"
            shape="square"
            size={36}
            style={{}}
          >
            <div
              className="component square mr-3 rounded"
              style={
                {
                  "height": "36px",
                  "width": "36px",
                }
              }
            >
              <div
                className="initials"
                style={
                  {
                    "fontSize": "15px",
                    "height": "36px",
                    "width": "36px",
                  }
                }
              >
                <span
                  style={
                    {
                      "lineHeight": "38px",
                    }
                  }
                >
                  f
                </span>
              </div>
            </div>
          </Avatar>
          <Link
            className="displayName"
            to="/app/customer/1"
          >
            <a
              className="displayName"
              to="/app/customer/1"
            >
              foo
            </a>
          </Link>
        </div>
        <div
          className="detail"
        >
          <Component
            channels={Immutable.List []}
            customerId={1}
            customerName="foo"
          >
            <div>
              CustomerChannels
            </div>
          </Component>
        </div>
        <CustomerTimelineButton
          isEditing={false}
        >
          <ForwardRef
            className="customerTimelineButtonWrapper"
            id="customer-timeline-button"
            intent="secondary"
            isDisabled={false}
            onClick={[Function]}
          >
            <BaseButton
              className="customerTimelineButtonWrapper"
              intent="secondary"
            >
              <button
                aria-disabled={false}
                className="wrapper customerTimelineButtonWrapper fill secondary medium"
                id="customer-timeline-button"
                onClick={[Function]}
                type="button"
              >
                <ButtonIconLabel
                  icon="format_list_bulleted"
                >
                  <span
                    className="wrapper"
                  >
                    <Icon
                      className="icon isLeft"
                    >
                      <i
                        className="material-icons icon isLeft medium"
                      >
                        format_list_bulleted
                      </i>
                    </Icon>
                    Customer timeline
                  </span>
                </ButtonIconLabel>
              </button>
            </BaseButton>
          </ForwardRef>
        </CustomerTimelineButton>
      </div>
      <Component
        context="ticket"
        displayTabs={true}
        source={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "integrations": Immutable.Map {
                  "118": Immutable.Map {
                    "foo": "bar",
                  },
                },
              },
            },
          }
        }
        widgets={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "context": "ticket",
              "template": Immutable.Map {
                "foo": "bar",
              },
            },
          ]
        }
      >
        <div>
          InfobarWidgets
        </div>
      </Component>
    </div>
  </InfobarCustomerInfoContainer>
</Provider>
`;

exports[`<InfobarCustomerInfo/> sources render basic customer info and widgets because there is customer data, the user is not editing widgets and current widgets are not empty 2`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <InfobarCustomerInfoContainer
    actions={
      {
        "cancelDrag": [MockFunction],
        "drag": [MockFunction],
        "drop": [MockFunction],
        "generateAndSetWidgets": [MockFunction],
        "removeEditedWidget": [MockFunction],
        "resetWidgets": [MockFunction],
        "setEditedWidgets": [MockFunction],
        "setEditionAsDirty": [MockFunction],
        "startWidgetEdition": [MockFunction],
        "stopWidgetEdition": [MockFunction],
        "updateEditedWidget": [MockFunction],
      }
    }
    customer={
      Immutable.Map {
        "id": 1,
        "name": "foo",
      }
    }
    dispatch={[MockFunction]}
    hasIntegrations={true}
    isEditing={false}
    sources={
      Immutable.Map {
        "ticket": Immutable.Map {
          "customer": Immutable.Map {
            "integrations": Immutable.Map {
              "118": Immutable.Map {
                "foo": "bar",
              },
            },
          },
        },
      }
    }
    widgets={
      Immutable.Map {
        "currentContext": "ticket",
        "_internal": Immutable.Map {
          "hasFetchedWidgets": true,
        },
        "items": Immutable.List [
          Immutable.Map {
            "id": 1,
            "context": "ticket",
            "template": Immutable.Map {
              "foo": "bar",
            },
          },
        ],
      }
    }
  >
    <div
      className="widgetsList d-flex flex-column"
      data-candu-id="infobar-widgets-list-view"
    >
      <div
        className="customerInfo"
      >
        <div
          className="customerProfile"
        >
          <Avatar
            className="mr-3 rounded"
            email=""
            name="foo"
            shape="square"
            size={36}
            style={{}}
          >
            <div
              className="component square mr-3 rounded"
              style={
                {
                  "height": "36px",
                  "width": "36px",
                }
              }
            >
              <div
                className="initials"
                style={
                  {
                    "fontSize": "15px",
                    "height": "36px",
                    "width": "36px",
                  }
                }
              >
                <span
                  style={
                    {
                      "lineHeight": "38px",
                    }
                  }
                >
                  f
                </span>
              </div>
            </div>
          </Avatar>
          <Link
            className="displayName"
            to="/app/customer/1"
          >
            <a
              className="displayName"
              to="/app/customer/1"
            >
              foo
            </a>
          </Link>
        </div>
        <div
          className="detail"
        >
          <Component
            channels={Immutable.List []}
            customerId={1}
            customerName="foo"
          >
            <div>
              CustomerChannels
            </div>
          </Component>
        </div>
      </div>
      <Component
        context="ticket"
        displayTabs={true}
        source={
          Immutable.Map {
            "ticket": Immutable.Map {
              "customer": Immutable.Map {
                "integrations": Immutable.Map {
                  "118": Immutable.Map {
                    "foo": "bar",
                  },
                },
              },
            },
          }
        }
        widgets={
          Immutable.List [
            Immutable.Map {
              "id": 1,
              "context": "ticket",
              "template": Immutable.Map {
                "foo": "bar",
              },
            },
          ]
        }
      >
        <div>
          InfobarWidgets
        </div>
      </Component>
    </div>
  </InfobarCustomerInfoContainer>
</Provider>
`;
